# english_buddy_bot

./: .env.example  .gitignore  README.md  alembic.ini  app.py  compose.yml  dev_english_buddy.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sample.env  setup.cfg
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 2023_11_24_2247-d70212b42edf_alembic_init.py  2023_11_24_2256-1cfd2ea6c370_create_users_table.py  2023_11_25_0110-a257707dd562_create_lessons_table.py  2023_11_25_0112-60d1cb7c85d2_create_slides_order_table.py  2023_11_25_0112-e758d23699f1_create_slides_table.py  2023_11_25_0113-bb7e0fa3665e_create_users_progress_table.py  2023_11_25_0114-0a5d45dfc43b_create_users_completed_lessons_table.py  2026_02_17_0000-20260217_0001_initial.py
core/: config.py
core/controllers/: choice_controllers.py  lesson_controllers.py  session_controller.py  slide_controllers.py  sticker_controllers.py  user_controllers.py
core/database/: database_connector.py  db.py
core/database/models/: __init__.py  answer.py  base.py  lesson.py  session.py  session_log.py  slide.py  slide_order.py  user.py  user_complete_lesson.py  user_progress.py
core/handlers/: base_handlers.py  errors_handler.py  lesson_handlers.py  quiz_handlers.py  session_handlers.py
core/keyboards/: base_keyboards.py  callback_builders.py  futher_button.py  keyboard_builders.py  keyboards.py
core/middlewares/: auth_middleware.py  session_middleware.py  session_middlewares.py
core/resources/: answers.py  command.py  enums.py  stickers.py
core/resources/stickers/: small_stickers.py
core/utils/: create_tables.py  routes_helper.py  session_helper.py
scripts/: migrate_sqlite_to_postgres.py
src/: app.py  config.py  consts.py  enums.py  lesson_path.py  main.py  scheduler_run.py  webapp_run.py  worker_run.py
src/API/: index.html
src/API/static/: script.js  style.css  styles.css
src/API/templates/: base.html  index.html  lesson.html  lessons.html  reactions.html  slide.html  slides.html  texts.html
src/app/: shemas.py
src/app/routers/: lessons.py  reactions.py  root.py  slides.py  texts.py
src/app/static/: script.js  style.css
src/app/templates/: base.html  lessons.html  reactions.html  slide.html  slides.html  texts.html
src/bot/: config.py
src/bot/controllers/: answer_controllers.py  choice_controllers.py  final_controllers.py  lesson_controllers.py  rework.py  session_controller.py  slide_controllers.py  user_controllers.py
src/bot/database/: db.py
src/bot/handlers/: base_handlers.py  command_handlers.py  errors_handler.py  lesson_handlers.py  premium_handlers.py  session_handlers.py
src/bot/internal/: blink1.py  commands.py  google_sheet.py  helpers.py  ngrok_whistles.py  notify_admin.py
src/bot/keyboards/: callback_builders.py  callback_data.py  keyboards.py
src/bot/middlewares/: auth_middleware.py  session_middlewares.py
src/bot/resources/: answers.py  commands.py  enums.py  notify_admin.py
src/bot/utils/: session_helper.py  (+2 more)
src/controllers/: misc.py  reaction.py  slide.py  text.py
src/core/: config.py
src/database/: database_connector.py  db.py  garbage_helper.py  tables_helper.py
src/tasks/: broker.py  scheduler.py  tasks.py
src/webapp/: consts.py  create_app.py  db.py  schemas.py  setup_app.py  shemas.py
tests/: conftest.py  test_create_tables.py  test_path.py  test_slide_controllers.py  test_user_controllers.py
tests/controllers_tests/: test_almost_right_reply_failsafe.py  test_get_seconds_until_starting_mark.py  test_misc.py  test_paranoid.py  test_reminder_text_picker.py
tests/database_tests/: test_garbage_collector.py  test_in_progress_lessons_recent_first.py  test_lesson_progress.py  test_user_crud.py
tests/webapp_tests/: test_all_handles_respond.py  test_quiz_slide_validation.py
(+111 files in other folders)
