[build-system]
requires = ["setuptools>=58.0.4", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "english_buddy_bot"
description = ""
version = "0.0.1"
authors = [
    { name = "vasgg", email = "vas.g@me.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogram>=v3.4.1",
    "sqlalchemy>=2.0",
    'pydantic>=2.6.4',
    "pydantic-settings>=2.2.1",
    "aiosqlite>=0.19",
    'fastapi>=0.109.2',
    'uvicorn>=0.18.3',
    'Jinja2>=3.1.3',
    'python-multipart>=0.0.6',
    'sentry-sdk>=1.40.3',
    'Pillow>=10.2.0',
    'fastui>=0.5.2',
]
requires-python = ">=3.11"

[project.scripts]
bot-run = "main:run_main"

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["ALL"]
ignore = ["Q", "T", "D", "ANN", "UP", "RUF", "G004", "RET504", "ISC002", "INP001", "EM101", "TRY003", "PTH", "TD", "FIX002"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
filterwarnings = [
    "ignore::DeprecationWarning",
]
