[build-system]
requires = ["setuptools>=58.0.4", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "english_buddy_bot"
description = ""
version = "0.0.1"
authors = [
    { name = "vasgg", email = "vas.g@me.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'aiogram>=3.25.0',
    'sqlalchemy[asyncio]>=2.0.46',
    'pydantic>=2.12.5',
    'pydantic-settings>=2.13.0',
    'aiosqlite>=0.22.1',
    'fastapi>=0.129.0',
    'uvicorn>=0.40.0',
    'python-multipart>=0.0.22',
    'sentry-sdk>=2.52.0',
    'Pillow>=12.1.1',
    'fastui>=0.9.0',
    'redis>=7.1.1',
    'async-timeout>=5.0.1',
    'arrow>=1.4.0',
]
requires-python = ">=3.13"

[project.scripts]
bot-run = "main:run_main"
webapp-run = "webapp_run:run_main"

[dependency-groups]
dev = [
    'httpx>=0.28.1',
    'pytest>=9.0.2',
    'pytest-asyncio>=1.3.0',
    'ruff>=0.15.1',
    'ty>=0.0.17',
]

[tool.black]
line-length = 119
target-version = ['py313']
skip-string-normalization = true

[tool.ruff]
line-length = 119
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.uv]
required-version = "==0.10.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
filterwarnings = [
    "ignore::DeprecationWarning",
]
