[metadata]
name = EnglishBuddyBot
version = 0.0.0
author = vasgg
author_email = vas.g@me.com

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    aiogram>=v3.2.0
    sqlalchemy>=2.0
    pydantic-settings>=2.1
    aiosqlite>=0.19
    fastapi>=0.108
    uvicorn>=0.25
    Jinja2>=3.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    bot-run = main:run_main


[options.extras_require]
dev =
    flake8
    pylint
    pip-tools
    pylama
    black
    ruff

